# conference_proceedings

./: .mailmap  HOWTOHELP.md  README.md
Akademy/: add-videos.sh  build.sh
Debian/: LICENSE  fetch-from-ftp.sh
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/: ABOUT-NLS  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  THANKS  TODO  aclocal.m4  config.guess  config.h.in  config.rpath  config.sub  configure  configure.ac  depcomp  index.html  install-sh  missing  mkinstalldirs
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/contrib/: ChangeLog  Makefile.am  Makefile.in  de_franconian_po.txt  evolution.txt  hello.1  index.html
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/debian/: changelog  control  copyright  index.html  postinst  prerm  rules
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/doc/: ChangeLog  Makefile.am  Makefile.in  gpl.texi  hello.info  hello.texi  index.html  mdate-sh  stamp-vti  texinfo.tex  version.texi
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/intl/: ChangeLog  Makefile.in  VERSION  bindtextdom.c  config.charset  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  eval-plural.h  explodename.c  finddomain.c  gettext.c  gettextP.h  gmo.h  hash-string.h  index.html  intl-compat.c  l10nflist.c  libgnuintl.h  loadinfo.h  loadmsgcat.c  localcharset.c  locale.alias  localealias.c  localename.c  ngettext.c  os2compat.c  os2compat.h  osdep.c  plural-exp.c  plural-exp.h  plural.c  plural.y  ref-add.sin  ref-del.sin  textdomain.c
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/m4/: ChangeLog  Makefile.am  Makefile.in  codeset.m4  gettext.m4  glibc21.m4  iconv.m4  index.html  isc-posix.m4  lcmessage.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4  progtest.m4
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/man/: ChangeLog  Makefile.am  Makefile.in  hello.1  help2man  index.html
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  Rules-quot  boldquot.sed  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  de_DE.gmo  de_DE.po  el.gmo  el.po  en@boldquot.header  en@quot.header  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  he.gmo  he.po  hello.pot  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  (+36 more)
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/src/: ChangeLog  Makefile.am  Makefile.in  alloca.c  getopt.c  getopt.h  getopt1.c  hello.c  index.html  system.h  version.c
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-2.1.1/tests/: ChangeLog  Makefile.am  Makefile.in  hello-1  index.html  nothing-1  world-1
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/: ABOUT-NLS  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  THANKS  TODO  aclocal.m4  config.guess  config.h.in  config.rpath  config.sub  configure  configure.ac  depcomp  index.html  install-sh  missing  mkinstalldirs
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/contrib/: ChangeLog  Makefile.am  Makefile.in  de_franconian_po.txt  evolution.txt  hello.1  index.html
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/debian/: changelog  control  copyright  hello.init  index.html  postinst  postrm  prerm  rules
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/doc/: ChangeLog  Makefile.am  Makefile.in  gpl.texi  hello.info  hello.texi  index.html  mdate-sh  stamp-vti  texinfo.tex  version.texi
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/intl/: ChangeLog  Makefile.in  VERSION  bindtextdom.c  config.charset  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  eval-plural.h  explodename.c  finddomain.c  gettext.c  gettextP.h  gmo.h  hash-string.h  index.html  intl-compat.c  l10nflist.c  libgnuintl.h  loadinfo.h  loadmsgcat.c  localcharset.c  locale.alias  localealias.c  localename.c  ngettext.c  os2compat.c  os2compat.h  osdep.c  plural-exp.c  plural-exp.h  plural.c  plural.y  ref-add.sin  ref-del.sin  textdomain.c
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/m4/: ChangeLog  Makefile.am  Makefile.in  codeset.m4  gettext.m4  glibc21.m4  iconv.m4  index.html  isc-posix.m4  lcmessage.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4  progtest.m4
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/man/: ChangeLog  Makefile.am  Makefile.in  hello.1  help2man  index.html
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  Rules-quot  boldquot.sed  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  de_DE.gmo  de_DE.po  el.gmo  el.po  en@boldquot.header  en@quot.header  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  he.gmo  he.po  hello.pot  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  (+36 more)
Debian/2006/debconf6/slides/Weeding_out_security_bugs-Javier_Fernandez_Sanguino/samples/hello/hello-insecure-2.1.1/src/: ChangeLog  Makefile.am  Makefile.in  alloca.c  getopt.c  getopt.h  getopt1.c  hello.c  index.html  server.c  server.h  system.h  version.c
(+28984 files in other folders)
