../../../../../../../../.git/annex/objects/p0/mx/URL-s2497--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-8f8d0d7b53c8a7a03e666377bd67138d/URL-s2497--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-8f8d0d7b53c8a7a03e666377bd67138d