../../../../../../../../.git/annex/objects/xm/vj/URL-s1643--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-c4b83127e61437aff5b1c18ba21dc426/URL-s1643--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-c4b83127e61437aff5b1c18ba21dc426