../../../../../../../../.git/annex/objects/Kz/Z6/URL-s2497--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-802cb31b15fda3a7f366ceacfe62eb15/URL-s2497--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-802cb31b15fda3a7f366ceacfe62eb15