../../../../../../../../.git/annex/objects/4p/5k/URL-s1643--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-74f2dd6de271b6951c5236f8ba0404d7/URL-s1643--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-74f2dd6de271b6951c5236f8ba0404d7