../../../../../../../../../.git/annex/objects/KZ/97/URL-s961--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-86c4953688b24d9e8f5ece9892e57aaa/URL-s961--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-86c4953688b24d9e8f5ece9892e57aaa