../../../../../../../../../.git/annex/objects/W0/1X/URL-s967--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-818a43539d9140d575815cf08139100a/URL-s967--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-818a43539d9140d575815cf08139100a