../../../../../../../../../.git/annex/objects/Mx/GZ/URL-s140--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-f671fe5aee6d03a78baaf738484eba79/URL-s140--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-f671fe5aee6d03a78baaf738484eba79