../../../../../../../../../.git/annex/objects/zV/Wx/URL-s431--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-21314419a4d0cee8ee25a2f2e808d05c/URL-s431--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-21314419a4d0cee8ee25a2f2e808d05c