../../../../../../../../../.git/annex/objects/px/qJ/URL-s1354--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-84651cdb7b9f43ee76dcd41c79e117d9/URL-s1354--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-84651cdb7b9f43ee76dcd41c79e117d9