../../../../../../../../../.git/annex/objects/qZ/59/URL-s1118--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-b2655a28f1954ddda330ba486ca24b4d/URL-s1118--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-b2655a28f1954ddda330ba486ca24b4d