../../../../../../../../../.git/annex/objects/22/Z9/URL-s961--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-c9c924e8ed4b060002149f1691189d49/URL-s961--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-c9c924e8ed4b060002149f1691189d49