../../../../../../../../../.git/annex/objects/xv/6G/URL-s967--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-0cea17ad087fd19fae7d79f1692f954c/URL-s967--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-0cea17ad087fd19fae7d79f1692f954c