../../../../../../../../../.git/annex/objects/K8/3J/URL-s140--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-2bab7b0b9d736c00d4b00f5b7856d7f8/URL-s140--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-2bab7b0b9d736c00d4b00f5b7856d7f8