../../../../../../../../../.git/annex/objects/5g/p4/URL-s431--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-b2aa23fe728848eae1452fbf029c2513/URL-s431--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-b2aa23fe728848eae1452fbf029c2513