../../../../../../../../../.git/annex/objects/43/73/URL-s1371--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-cd6f3e292bc96cf10011b1da8e613bb4/URL-s1371--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-cd6f3e292bc96cf10011b1da8e613bb4