../../../../../../../../../.git/annex/objects/Gm/WF/URL-s1118--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-f805e4863f0ca87049d4e5f840f5313f/URL-s1118--http&c%%meetings-archive.debian.net%pub%debian-meetings%2006%debconf6%slides%Weeding_out_security_bugs-Javier_Fernandez_Sanguino-f805e4863f0ca87049d4e5f840f5313f